--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,14 @@
        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>y este es el parrafo de incio </p>
+        <div id= "countainer">
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante del post</h1>
+                <p>y este es el parrafo de incio 
+                    Donde vamos a explicar 
+                    las cosas increibles 
+                    que se pueden hacer con ramas.</p>
+                </div>
+            </div>        
     </body>
 </html>
