--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <div id= "countainer">
+        <div id="cabecera">
+            Cabecera </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>y este es el parrafo de incio 
