--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     <body>
         <div id= "countainer">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png"/>
             Hyperblog
             <span id="tagline"> Tu blog de cabecera</span>
         </div>
