--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
-        
+       <meta charset="UTF-8">
        <title>BIENVENIDO A HYPERBLOG 2.0</title> 
        <link rel="stylesheet" href="css/estilos.css" />
     </head>
@@ -24,9 +25,11 @@
                         en Youtube. Excepto si 
                         eres un rockstar. Pero 
                     estadisticamente no lo eres......
-                    por ahora</p>
+                    por ahora.</p>
                     <p>Suscribete y dale like</p>
                 </div>
-            </div>        
+            </div>     
+                  
     </body>
+
 </html>
