Se hicieron modificaciones en el footer del archivo se agrego fondo azul y un corazon en la rama footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,9 @@
                     por ahora</p>
                     <p>Suscribete y dale like</p>
                 </div>
-            </div>        
+            </div>       
+            <div id="footer">
+                Hecho con amor en Platzi 💙	
+            </div> 
     </body>
 </html>
