--- a/blogpost.html
+++ b/blogpost.html
@@ -14,12 +14,12 @@
         </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>y este es el parrafo de incio 
-                    Donde vamos a explicar 
+                <p>y este es el párrafo de incio 
+                    ,donde vamos a explicar 
                     las cosas increibles 
                     que se pueden hacer con ramas.</p>
                     <p>Los blogs son la mejor forma 
-                        de comaprtir informacion y 
+                        de compartir información y 
                         tus ideas. Mucho mas que ir 
                         a conferencias o salir 
                         en Youtube. Excepto si 
