--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
                     ,donde vamos a explicar 
                     las cosas increibles 
                     que se pueden hacer con ramas.</p>
+
+                    <p> <img id="equipo" src="imagenes/equipo.jpg" witdh="10%"/>
+                    </p>
                     <p>Los blogs son la mejor forma 
                         de compartir información y 
                         tus ideas. Mucho mas que ir 
@@ -26,7 +29,7 @@
                         eres un rockstar. Pero 
                     estadisticamente no lo eres......
                     por ahora.</p>
-                    <p>Suscribete y dale like</p>
+                    <p>Suscribete y dale like.</p>
                 </div>
             </div>       
             <div id="footer">
